--- a/ios/tys/Info.plist
+++ b/ios/tys/Info.plist
@@ -37,16 +37,14 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Your message to the user here</string>
 	<key>NSDocumentsFolderUsageDescription</key>
 	<string>$(PRODUCT_NAME) needs access to the Documents folder to save files.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your Apple library to read video.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>$(PRODUCT_NAME) needs access to add files to the photo library.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Your message to the user here</string>
+	<string>$(PRODUCT_NAME) needs access to the photo library to save files.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
